# Ray-Tracing

./: BVH.cpp  BVH.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Intersection.h  Light.h  Model.cpp  Model.h  OBJ_Loader.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  main.cpp
